GP-3839: Various speed improvements for Trace RMI